# website

./: .env.sample  README.md  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
clients/: admin.py  forms.py  models.py  urls.py  views.py
clients/migrations/: 0001_initial.py  0002_client_owner.py  0003_alter_client_owner.py  0004_alter_client_owner.py  0005_alter_client_owner.py  0006_alter_client_owner.py
config/: settings.py  urls.py
letters/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
letters/migrations/: 0001_initial.py  0002_letter_created_at.py  0003_letter_owner.py  0004_alter_letter_owner.py  0005_alter_letter_owner.py
logstatus/: admin.py  apps.py  models.py  urls.py  views.py
logstatus/migrations/: 0001_initial.py  0002_alter_logmessage_sending_status_and_more.py  0003_logmessage_mailing_name.py  0004_remove_logmessage_mailing_name.py  0005_logmessage_client_info_and_more.py  0006_alter_logmessage_client_info.py  0007_remove_logmessage_client_info_logmessage_id_mailing_and_more.py  0008_alter_logmessage_id_mailing.py  0009_alter_logmessage_id_mailing.py  0010_alter_logmessage_id_mailing.py  0011_remove_logmessage_server_answer.py  0012_alter_logmessage_sending_status.py
mailing/: admin.py  apps.py  forms.py  models.py  scheduler.py  services.py  urls.py  views.py
mailing/migrations/: 0001_initial.py  0003_alter_mailing_period_delete_period.py  (+18 more)
users/: admin.py  forms.py  models.py  services.py  urls.py  views.py
website/: admin.py  forms.py  models.py  urls.py  views.py
(+38 files in other folders)
