[tool.poetry]
name = "website"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.2"
psycopg2 = "^2.9.9"
django-apscheduler = "^0.6.2"
pillow = "^10.2.0"
python-dotenv = "^1.0.1"
redis = "^5.0.3"


[tool.poetry.group.linters.dependencies]
mypy = "^1.9.0"
black = "^24.4.0"
isort = "^5.13.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = '.venv'
warn_unreachable = true
ignore_missing_imports = true

[tool.black]
line-length = 119

[tool.isort]
line_length = 119